--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -7,6 +7,7 @@
   <div class="user-info">
     <li><%= @user.username %></li>
     <li><%= image_tag @user.avatar_url %></li>
+    <li><%= @g_user[:location] %></li>
   </div>
 
 </div>
