Adds last 10 repos to view, adds pie chart of primary languages to view

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -40,3 +40,14 @@ body.dashboard {
   vertical-align: top;
   color: #FE5F55;
 }
+
+.lang-chart {
+  width: 100%;
+  // margin: 0 auto;
+  display: block;
+  margin-top: 50px;
+}
+
+.highcharts-background {
+  fill: #C7EFCF;
+}
