Adds last 30 events pie chart

--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -73,3 +73,10 @@ body.dashboard {
   vertical-align: top;
   margin-left: 20px;
 }
+
+.event-chart {
+  width: 100%;
+  // margin: 0 auto;
+  display: block;
+  margin-top: 50px;
+}
