--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -5,6 +5,7 @@
 body.home {
   background-color: #FE5F55;
   margin: 0;
+  font-family: "Maven Pro", sans-serif;
 }
 
 .home-header {
@@ -16,11 +17,6 @@ body.home {
 
 .home-link {
   text-align: center;
-  // border: 2px solid #EEF5DB;
-  // width: 146px;
-  // height: 23px;
-  // border-radius: 20px;
-  // padding-top: 4px;
   margin-left: auto;
   margin-right: auto;
   display: block;
