--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -71,20 +71,15 @@
     </div>
   </div>
 
-  <div class="events">
-    <!-- <% last_events = @client.user_events("#{@user.username}").sort_by &:created_at %>
-    <% last_events.last(300).each do |event| %>
-      <%= event.type %>
-    <% end %> -->
-  </div>
-
   <div class="chart-container" id="chart-container">
     <div class="lang-chart" id="lang-chart">
 
     </div>
 
-    <div class"event-chart" id="event-chart">
+    <div class="event-chart" id="event-chart">
 
     </div>
 
   </div>
+
+</body>
